refactor: 문제 1 ~ 7 코드 리펙토링 및 의미없는 주석 삭제
문제 7번 아이디 valid 검사하는 메소드 추가 및 의미없는 주석들을 삭제 했습니다.